# tensegrity-lab

./: README.md  pyproject.toml  tensegrity_dr.py
examples/: app.py
src/tensegritylab/: __init__.py  dr.py  editor_state.py  fdm.py  opt.py  planner.py  presets.py
tests/: test_buckling.py  test_editor_state.py  test_export.py  test_fdm_init.py  test_io_presets.py  test_opt.py  test_planner_basic.py  test_public_api.py  test_tune_prestress.py
