[project]
name = "tensegritylab"
version = "0.1.0"
description = "Tensegrity dynamic relaxation solver"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "streamlit",
    "plotly",
]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
